testimonial block defined. an alignment problem with quote line position fixed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,15 @@ a {
   fill: var(--color-primary);
 }
 
+.icon--white {
+  fill: white;
+}
+
+.icon--small {
+  width: 30px;
+  height: 30px;
+}
+
 .icon-container {
   display: inline-flex;
   background-color: #f3f9fa;
@@ -181,6 +190,15 @@ a {
   width: 70px;
   height: 70px;
   border-radius: 100%;
+}
+
+.icon-container--accent {
+  background: var(--color-accent);
+}
+
+.icon-container--big {
+  width: 80px;
+  height: 80px;
 }
 
 /* Buttons */
@@ -402,6 +420,12 @@ a {
 
 /* Quotes */
 
+.quote {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .quote__text {
   color: var(--color-body-darker);
   font-size: 3rem;
@@ -432,6 +456,12 @@ a {
 .quote__line {
   position: relative;
   top: -8px;
+}
+
+@media screen and (min-width: 768px) {
+  .quote__line {
+    top: -12px;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -465,5 +495,54 @@ a {
 @media screen and (min-width: 1024px) {
   .grid--1x3 {
     grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Testimonials */
+
+.testimonial {
+  padding: 3rem;
+  margin: 2rem;
+}
+
+.testimonial__image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.testimonial__image-container {
+  position: relative;
+  margin: 0 2.7rem;
+}
+
+.testimonial__image-container > .icon-container {
+  position: absolute;
+  top: 4%;
+  right: -40px;
+}
+
+.testimonial__quote {
+  margin: 5.5rem 1rem;
+  margin-bottom: 1.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .testimonial__image-container {
+    margin: 1.5rem 0;
+  }
+
+  .testimonial__quote {
+    margin: 8rem;
+    margin-right: 1.5rem;
+  }
+
+  .testimonial__quote .quote__text,
+  .testimonial__quote .quote__author {
+    font-size: 2.4rem;
+  }
+
+  .testimonial__quote .quote__company {
+    font-size: 1.6rem;
   }
 }
